# BizHawk

./: .gitmodules  diff.diff  timing.diff
.github/workflows/: ci.yml  release.yml  waterbox.yml
Assets/dll/: bsnes.wbx.zst  mupen64plus.exp  mupen64plus.lib
ExternalProjects/BizHawk.SrcGen.SettingsUtil/: DefaultSetterGenerator.cs
libmupen64plus/mupen64plus-core/src/r4300/: r4300.c
src/: MainSlnExecutable.props
src/BizHawk.Bizware.Graphics/OpenGL/: SDL2OpenGLContext.cs
src/BizHawk.Bizware.Input/KeyMouseInput/: X11KeyMouseInput.cs
src/BizHawk.Client.Common/: RomLoader.cs
src/BizHawk.Client.Common/config/: Config.cs
src/BizHawk.Client.Common/movie/bk2/: Bk2MnemonicLookup.cs
src/BizHawk.Client.Common/movie/import/: LsmvImport.cs
src/BizHawk.Client.Common/tools/RamSearchEngine/: Extensions.cs  IMiniWatch.cs  RamSearchEngine.cs  SearchEngineSettings.cs
src/BizHawk.Client.EmuHawk/: MainForm.Hotkey.cs  MainForm.VSystem.cs  MainForm.cs  UIHelper.cs
src/BizHawk.Client.EmuHawk/GraphicsImplementations/: OpenGLProvider.cs
src/BizHawk.Client.EmuHawk/config/SNES/: BSNESOptions.cs  (+1 more)
src/BizHawk.Client.EmuHawk/movie/: PlayMovie.cs
src/BizHawk.Common/: IImportResolver.cs
src/BizHawk.Common/LSB/: XlibImports.cs
src/BizHawk.Emulation.Common/Interfaces/: IOpenGLProvider.cs
src/BizHawk.Emulation.Cores/: BizHawk.Emulation.Cores.csproj  CoreInventory.cs
waterbox/: common.mak  make-all-cores.sh
waterbox/waterboxhost/: Cargo.toml  build-debug-no-dirty-detection.sh  build-debug.sh  build-release.bat  build-release.sh
waterbox/waterboxhost/src/: elf.rs
(+51 files in other folders)
