[package]
name = "waterboxhost"
version = "0.1.0"
authors = ["nattthebear <goyuken@gmail.com>"]
edition = "2018"
publish = false
#rust = "nightly"

[features]
no-dirty-detection = []

[profile.release]
lto = true

[dependencies]
bitflags = "2.1.0"
page_size = "0.5.0"
lazy_static = "1.4.0"
#getset = "0.1.1"
parking_lot = "0.12.1"
itertools = "0.10.5"
goblin = { version = "0.6.1", features = ["elf64", "std"] }
anyhow = "1.0"
sha2 = "0.10.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["memoryapi", "handleapi", "errhandlingapi", "winnt"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.141"

[lib]
doctest = false
crate-type=["cdylib"]
